# CamSync

./: .gitignore  .gitmodules  AcquireFrames.py  CleanedSoftTrigger.py  README.md  SoftTrigger.py  externaltriggercamera.launch  tester.py
Callib_Image_Collectors/: README.md  cam_callib_image_collector.py  high_rate_stereo_callib.py  stereo_callib_image_collector.py
HardwareTriggerSync/: HardTriggerSyncChunk.py  HardwareTriggerSync.cpp  Makefile
SoftTrigger/: ChunkData.py  CleanedSoftTrigger.py  HardTriggerChunk.py  HardTriggerChunk1.py  HardTriggerChunk2.py  MultiCam.py
external_hard_trigger/BEVHardware/src/SyncVerify/: CMakeLists.txt  SyncVerify.py  (+1 more)
external_hard_trigger/BEVHardware/src/syncverify/: CMakeLists.txt  SyncVerify.py  package.xml
external_hard_trigger/BEVHardware/src/syncverify/msg/: SyncVerify.msg
hardware_trigger_sync/: HardTriggerSync.py  README.md  externaltriggercamera.launch  log
spinnaker-3.0.0.118-amd64/: README  install_spinnaker.sh  libgentl_3.0.0.118_amd64.deb  libspinnaker-c-dev_3.0.0.118_amd64.deb  libspinnaker-c_3.0.0.118_amd64.deb  libspinnaker-dev_3.0.0.118_amd64.deb  libspinvideo-c-dev_3.0.0.118_amd64.deb  libspinvideo-c_3.0.0.118_amd64.deb  libspinvideo-dev_3.0.0.118_amd64.deb  libspinvideo_3.0.0.118_amd64.deb  remove_spinnaker.sh  spinupdate-dev_3.0.0.118_amd64.deb  spinupdate_3.0.0.118_amd64.deb  spinview-qt-dev_3.0.0.118_amd64.deb  spinview-qt_3.0.0.118_amd64.deb
spinnaker_python-3.0.0.118-cp38-cp38-linux_x86_64/: README.txt
spinnaker_python-3.0.0.118-cp38-cp38-linux_x86_64/Examples/Python3/: AcquireAndDisplay.py  Acquisition.py  BufferHandling.py  ChunkData.py  CounterAndTimer.py  DeviceEvents.py  Enumeration.py  EnumerationEvents.py  Enumeration_QuickSpin.py  Exposure_QuickSpin.py  FileAccess_QuickSpin.py  ImageChannelStatistics.py  ImageEvents.py  ImageFormatControl.py  ImageFormatControl_QuickSpin.py  Inference.py  Logging.py  LookupTable.py  NodeMapCallback.py  NodeMapInfo.py  NodeMapInfo_QuickSpin.py  SaveToAvi.py  Sequencer.py  Trigger.py  Trigger_QuickSpin.py
(+18 files in other folders)
