<?xml version="1.0"?>
<package>
  <name>syncverify</name>
  <version>0.1.0</version>
  <description>ROS interface to grab device timestamps from BFLY-PGE and the VectorNav INS/GPS</description>

  <maintainer email="kolheshaunak@tamu.edu">kololhe</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://ros.org/wiki/vectornav</url> -->

  <author email="kolheshaunak@tamu.edu">Shaunak Kolhe</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
